--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h2>Enter your attributes</h2>
-	<form>
+	<form id="basic-attributes">
 		<ul id="attributes">
 			<li>Endurance:<input type="number" name="end"></li>
 			<li>Strength:<input type="number" name="str"></li>
@@ -38,6 +38,23 @@
 		<li>Fatigue:</li>
 		<li>Max Encumbrance:</li>
 	</ul>
+	
+	<button id="alchemy-button">Calculate Alchemy Success Rate</button>
+	<div class="alchemy">
+		<form>
+			<label>Alchemy Skill:<input type="number" name="alchemy-skill"></label>
+			<br>
+			<label>Fatigue:</label>
+			<div class="fatigue">
+				<label id="current-fatigue">Current<input type="number" name="current-fatigue"></label>
+				<span>/</span>
+				<label id="max-fatigue">Max<input type="number" name="max-fatigue"></label>
+			</div>
+			<br>
+			<input type="submit" name="submit-alchemy" value="OK"><br>
+		</form>
+		<p></p>
+	</div>
 	<script type="text/javascript" src="main.js"></script> 
 </body>
 </html>
